# archives

./: Cargo.toml
src/: lib.rs  main.rs
src/content/: mod.rs
src/content/warframe/: export_json.rs  index.rs  language_code.rs  listable.rs  mod.rs  public_export.rs
src/content/warframe/models/: ability.rs  arcane.rs  avionic.rs  custom.rs  drone.rs  flavour.rs  focus_upgrade.rs  fusion_bundle.rs  gear.rs  intrinsic.rs  key.rs  manifest.rs  mod.rs  mod_set.rs  nightwave.rs  other.rs  railjack.rs  railjack_weapon.rs  recipe.rs  region.rs  relic.rs  resource.rs  sentinel.rs  sortie_reward.rs  upgrade.rs  warframe.rs  weapon.rs
src/meta/: mod.rs
src/meta/materials/formats/: unknown.rs
src/meta/tools/: mod.rs
