[package]
name        = "archives"
version     = "0.1.0"
edition.workspace     = true
authors.workspace     = true
license     = "AGPL-3.0"
repository  = "https://github.com/RocinRykor/archives"

[lib]
name = "archives"
path = "src/lib.rs"

[[bin]]
name = "archives"
path = "src/main.rs"

[dependencies]
cortex   = { workspace = true }
commlink = { workspace = true }
tokio    = { workspace = true }
serde    = { workspace = true }
serde_json = { workspace = true }
tracing  = { workspace = true }
serde_derive = "1.0.228"
